tests/NormalTests/paczka1/fuzzy1/56809438.err
Error in line 6: BO2v2HsIyZ S54 30,7
Error in line 13: Uujx4 A205 72,5
Error in line 14: Uujx4 S450 2,2
Error in line 21: Uujx4 S54 19,0
Error in line 35: EaQUv S397 4,8
